--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
-  background: url(./assets/background.png) !important;
-  background-size: contain;
+  background: url(./assets/bg-svg_v8.svg) !important;
 }
 
 @media only screen and (max-width: 600px) {
